fix: update Dockerfile and Jenkinsfile with new Docker image configs for JavaFx GUI to match CI pipeline signature